# JammVpn

./: .gitattributes  .gitignore  ATTRIBUTION.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  test_defect.txt
.github/workflows/: ci.yml
From designer/: README.md  index (1).html  mock-tauri.js  preview.html  style.css  ui.js
app/: README.md
app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/ui/: index.html  main.js  style.css  ui.js  world-dots.json
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  store.rs
crates/core/: Cargo.toml
crates/core/src/: base64.rs  config.rs  error.rs  json.rs  lib.rs  secret.rs  util.rs
crates/core/src/geo/: geoip.rs  geosite.rs  mod.rs  protobuf.rs
crates/core/src/model/: mod.rs  profile.rs  protocol.rs
crates/core/src/parse/: awg.rs  clash.rs  link.rs  mod.rs  singbox.rs  subscription.rs  uri.rs  xray.rs
crates/core/src/routing/: domain.rs  engine.rs  mod.rs  preset.rs  rule.rs
crates/core/src/split/: cidr.rs  config.rs  engine.rs  mod.rs
crates/net/: Cargo.toml
crates/net/examples/: link_proxy.rs  reality_probe.rs  reality_proxy.rs  vless_reality.rs
crates/net/src/: buf_reader.rs  conn.rs  diagnose.rs  engine.rs  fakeip.rs  from_profile.rs  inbound.rs  lib.rs  netstack.rs  outbound.rs  reality_transport.rs  slide_buffer.rs  subscription.rs  sync_adapter.rs  target.rs  tests.rs  tlsutil.rs  trojan.rs  udp.rs  urltest.rs  util.rs  vless.rs  wgserver.rs
crates/net/src/dns/: message.rs  mod.rs
crates/net/src/hysteria2/: config.rs  http3.rs  mod.rs  proto.rs  stream.rs  tls.rs  tunnel.rs  udp.rs
crates/net/src/reality/: common.rs  mod.rs  reality_aead.rs  reality_auth.rs  reality_certificate.rs  reality_cipher_suite.rs  reality_client_connection.rs  reality_client_verify.rs  reality_io_state.rs  reality_reader_writer.rs  reality_records.rs  reality_tls13_keys.rs  reality_tls13_messages.rs  reality_util.rs
crates/net/src/shadowsocks/: crypto.rs  mod.rs  ss2022.rs  ss2022_udp.rs  stream.rs  udp.rs
crates/net/src/tuic/: config.rs  loopback.rs  mod.rs  proto.rs  stream.rs  tls.rs  tunnel.rs  udp.rs
crates/net/src/vision/: mod.rs  tls_deframer.rs  tls_fuzzy_deframer.rs  tls_handshake_util.rs  vision_filter.rs  vision_pad.rs  vision_plain_stream.rs  vision_stream.rs  vision_tls_util.rs  vision_unpad.rs
crates/net/src/vless_encryption/: aead.rs  handshake.rs  mod.rs  stream.rs  xor.rs
crates/net/src/wireguard/: config.rs  device.rs  driver.rs  loopback.rs  mod.rs  obfs.rs  stream.rs  tunnel.rs  udp_socket.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/drivers/ndisrd/amd64/: ndisrd.cat  ndisrd.sys  ndisrd_lwf.inf
crates/platform-windows/src/: autostart.rs  dpapi.rs  lib.rs  split.rs  sysproxy.rs
crates/platform-windows/src/wfp/: controller.rs  ipc.rs  mod.rs  redirect.rs
crates/platform-windows/src/windivert/: driver.rs  mod.rs
crates/platform-windows/src/winpkfilter/: attribution.rs  driver.rs  mod.rs
wfp-driver/: JammVpnSplit.inf  JammVpnSplit.vcxproj  README.md  build.ps1  load.ps1  unload.ps1
wfp-driver/src/: driver.c  driver.h
