# Корневой манифест воркспейса JammVPN.
# core      — переносимый крейт (модель, парсеры, маршрутизация); без платформенного кода.
# platform-windows — Windows-слой (WFP split, wintun, DPAPI). Сейчас: интерфейсы + заглушки.
[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/net",
    "crates/platform-windows",
    "crates/cli",
    "app/src-tauri",
]
# Рутинные cargo build/test/clippy (без --workspace) идут по этим крейтам, не
# тянут тяжёлые Tauri-зависимости. GUI собирается явно: cargo build -p jammvpn-app.
default-members = [
    "crates/core",
    "crates/net",
    "crates/platform-windows",
    "crates/cli",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jammeren2"]
rust-version = "1.80"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

# Профиль для профилирования CPU (samply/flamegraph): та же оптимизация, что и
# release, но с отладочными символами и без strip — иначе кадры не читаются.
[profile.profiling]
inherits = "release"
strip = false
debug = true
