[package]
name = "jammvpn-app"
version = "0.1.9"
description = "JammVPN — десктопный GUI (Tauri)"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.clippy]
all = "warn"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "sync",
] }
jammvpn-cli = { path = "../../crates/cli" }
# Нативный диалог «Сохранить как» для экспорта .conf.
tauri-plugin-dialog = "2"
