[package]
name = "jammvpn-cli"
version = "0.1.0"
description = "JammVPN CLI — управление узлами и локальный прокси"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "jammvpn_cli"
path = "src/lib.rs"

[[bin]]
name = "jammvpn"
path = "src/main.rs"

[lints.clippy]
all = "warn"

[dependencies]
jammvpn-core = { path = "../core" }
jammvpn-net = { path = "../net" }
serde = { version = "1", features = ["derive"] }
# QR-код клиентского .conf локального WG (SVG; без image-фичи — лишних зависимостей нет).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
    "signal",
    "time",
] }

# DPAPI-шифрование секретов конфига — только Windows.
[target.'cfg(windows)'.dependencies]
jammvpn-platform-windows = { path = "../platform-windows" }
