[package]
name = "jammvpn-net"
version = "0.1.0"
description = "Асинхронное сетевое ядро JammVPN: outbound-диалеры и локальный прокси"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.clippy]
all = "warn"

[dependencies]
jammvpn-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }

# Shadowsocks AEAD (RustCrypto — чистый Rust, без cmake/nasm).
aes-gcm = "0.10"
aes = "0.8" # AES-ECB single-block для separate header SS-2022 UDP (SIP022)
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
blake3 = "1"   # деривация сессионного подключа Shadowsocks 2022 (SIP022)
blake2 = "0.10" # MAC1 для AmneziaWG-обфускации (пересчёт под H-заголовок)
generic-array = "0.14"
getrandom = "0.2"

# REALITY (TLS 1.3 + X25519/HKDF/AES-GCM/HMAC) — порт из cfal/shoes (MIT).
aws-lc-rs = "1"
rand = "0.9"
base64 = "0.22"
subtle = "2"
log = "0.4"
bytes = "1"
memchr = "2"

# WireGuard / AmneziaWG outbound: Noise-ядро (boringtun) + userspace netstack
# (smoltcp). AWG-обфускация — своя, поверх UDP (см. wireguard/obfs.rs).
boringtun = "0.7.1"
smoltcp = { version = "0.13.1", default-features = false, features = [
    "std",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
    "socket-dns",
    "async",
    "log",
] }

# TUIC v5 (QUIC): quinn + rustls с тем же aws-lc-rs-провайдером, что REALITY/WG
# (default-features off — иначе quinn тянет ring как второй крипто-провайдер).
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls-aws-lc-rs",
    "log",
] }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "aws_lc_rs",
    "tls12",
] }
# HTTPS-фетч подписок (с проверкой сертификата по корням Mozilla).
tokio-rustls = { version = "0.26", default-features = false, features = [
    "aws-lc-rs",
    "tls12",
] }
webpki-roots = "0.26"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
x509-parser = { version = "0.18", default-features = false, features = ["verify-aws"] }
