[package]
name = "jammvpn-platform-windows"
version = "0.1.0"
description = "Windows-слой JammVPN: WFP split-туннелирование, wintun TUN, DPAPI (интерфейсы + заглушки)"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.clippy]
all = "warn"

[dependencies]
jammvpn-core = { path = "../core" }

# DPAPI (шифрование секретов at-rest, scope = текущий пользователь). Реальная
# WFP/wintun-интеграция добавляется на этапе драйвера.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Registry",
    "Win32_Foundation",
] }
