[package]
name = "jammvpn-platform-windows"
version = "0.1.0"
description = "Windows-слой JammVPN: WFP split-туннелирование, wintun TUN, DPAPI (интерфейсы + заглушки)"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.clippy]
all = "warn"

[dependencies]
jammvpn-core = { path = "../core" }

# DPAPI (шифрование секретов at-rest, scope = текущий пользователь). Реальная
# WFP/wintun-интеграция добавляется на этапе драйвера.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Networking_WinSock",
    "Win32_Networking_WinInet",
    "Win32_Foundation",
] }
# Windows Packet Filter (WinpkFilter / ndisapi) — захват пакетов на уровне NDIS
# для per-app split-туннелирования (как WireSock). Требует установленного
# драйвера (ndisrd) и запуска от администратора.
ndisapi = "0.5"
# Атрибуция пакетов к процессу (таблицы TCP/UDP → PID → путь к exe) + Win32-события.
# Версия пиннится под ту, что использует ndisapi 0.5.6 (общий тип HANDLE).
windows = { version = "=0.54.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
